# ML-DS-journey

./: .gitattributes  .gitignore  README.md  pyproject.toml
Section-2/: movie_revenue.ipynb  movie_revenue.py
Section-4/: Grad_Desc_2nd.ipynb  Grad_Desc_2nd.py  Gradient_Descent.ipynb  Gradient_Descent.py
Section-5/: California_Housing.ipynb  California_Housing.py  Valuation_tool.py  california_valuation.py  test_val.py
Section-6/: Bayes_Class_2.py  Bayes_Class_3.py  Bayes_Class_4.py  Bayes_Classifier.py  Naive_Bayes_Scikit.py
Section-6/side-quests/Lyrics/: eg-md-file-Afterglow.md  music-words.py
Section-7/: neural_networks.py
python/: S3-Functions.ipynb  S3-Functions.py  S3-LSD_case_study.ipynb  S3-LSD_case_study.py  S3-Modules.ipynb  S3-Modules.py  S3-Objects.ipynb  S3-Objects.py  Section-3.ipynb  Section-3.py  life.py
