[project]
name = "ml-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "indic-transliteration>=2.3.82",
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "keras>=3.14.0",
    "lyricsgenius>=3.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "setuptools<82",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "wordcloud>=1.9.6",
]
